--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span id="liters"></span>
         <small>Remained</small>
       </div>
-      <div class="percentage" id="percentage"></div>
+      <div class="percentage" id="percentage">20%</div>
     </div>
     <p class="text">Select how many glasses of water that you have drank</p>
     <div class="cups">
